<resources>
    <string name="app_name">quizrysy</string>
    <string name="question">Który szczyt w Tatrach jest najwyższy</string>
    <string name="answ_a">Giewont</string>
    <string name="answ_b">Kasprowy Wierch</string>
    <string name="answ_c">Rysy</string>
    <string name="cheat">Podpowiedź</string>
    <string name="check">Sprawdź</string>
    <string name="win">Dobra odpowiedź</string>
    <string name="loss">Błędna odpowiedź</string>
    <string name="desc">Rysy</string>
    <string name="hint">Masyw Rysów posiada trzy wierzchołki. Na granicy polsko-słowackiej znajduje się średni co do wysokości wierzchołek północno-zachodni, którego różne pomiary dały wysokość od 2498,7 do 2499,6 m[2] (zgodną z tradycyjnie uznawaną wartością 2499 m[3]). Wierzchołek ten jest najwyżej położonym punktem Polski. Spośród klasycznych pomiarów geodezyjnych wykonanych dla tego wierzchołka najdokładniejsze przeprowadzono w roku 1988, kiedy metodą precyzyjnej niwelacji trygonometrycznej wyznaczono, niezależnie od strony polskiej oraz słowackiej, wysokość punktu geodezyjnego zlokalizowanego 60 cm poniżej szczytu. Otrzymano wynik 2498,712 m od strony polskiej i 2498,724 m od strony słowackiej (różnica jedynie 1,2 cm) – a więc wysokość północno-zachodniego wierzchołka Rysów wynoszącą (po zaokrągleniu do 0,1 m) 2499,3 m[4].

    Pierwsze pomiary wysokości Rysów przeprowadzono około połowy XIX wieku bardzo nieprecyzyjną metodą barometryczną, jeszcze bez podziału na poszczególne wierzchołki, otrzymując istotnie zaniżoną wartość 2309 m n.p.m. W rezultacie za najwyższy szczyt „Tatr Nowotarskich” (dzisiejsze Tatry Polskie) przejściowo uznawano Świnicę, której pierwszy pomiar z 1867 roku wykazał (zawyżony z kolei) wynik 2336 m. Wykonywane od lat 70. XIX wieku austriackie wojskowe pomiary kartograficzne dały już stosunkowo precyzyjne wyniki, z niewielkimi zastrzeżeniami uznawane do czasów najnowszych[5]. W latach 10. XXI wieku rozwój technik geodezji satelitarnej umożliwił weryfikację i aktualizację wcześniej podawanych wartości. W roku 2019 geodeci z AGH w ramach projektu badawczego „Setka w Koronie” zmierzyli wysokości najważniejszych polskich gór, dla uzyskania wiarygodnych wyników łącząc techniki LIDAR (do wstępnego zidentyfikowania potencjalnie najwyższych punktów góry) i GNSS (do właściwego pomiaru); w opublikowanej pracy zauważyli przy tym, że żadna z tych metod nie byłaby samodzielnie wystarczająca. Uzyskana przez nich wysokość granicznego wierzchołka Rysów wyniosła 2499,0 m n.p.m. (w układzie wysokości Kronsztad) z dopuszczalnym błędem pomiaru 10 cm[6][7]. Pomimo to, zakłady kartograficzne „Sygnatura” i „Polkart” podały na swoich mapach z 2020 roku najwyższy punkt Polski o wysokości 2500 m w oparciu wyłącznie o dane lidarowe, uzasadniając to obecnością w nich czterech punktów z przedziału 2499,8–2499,9 m (po zaokrągleniu do pełnych metrów 2500 m) w obrębie kopuły szczytowej północno-zachodniego wierzchołka. Punkty te zinterpretowano jako reprezentację słupka granicznego i sąsiedniego głazu. Wydawcy zastrzegli, że dopuszczają błąd jednego metra w podawanych przez siebie wysokościach[8]. Przytoczone punkty znajdują się jednak w odległości 3–4 metrów od lokalizacji słupka granicznego podanego w Państwowym Rejestrze Granic. Zawyżenie położenia Rysów w danych lidarowych zauważono już wcześniej; zinterpretowano je wtedy jako efekt licznej obecności turystów na szczycie w trakcie wykonywania nalotów lotniczego skaningu laserowego i błędnej klasyfikacji części uzyskanych odbić (będących możliwymi odbiciami plamki lasera od ludzi) jako reprezentacji gruntu[9].

    Najwyższy z wierzchołków (tak zwany środkowy) wznosi się około 1,5 m wyżej od wierzchołka granicznego, stąd ma wysokość w przedziale od około 2500,2 do około 2501,1 m[2] i znajduje się po stronie słowackiej, podobnie jak najniższy wierzchołek południowo-wschodni (2472 m[10], według wcześniejszego pomiaru 2473 m). Podawana powszechnie w literaturze i na mapach wysokość 2503 m dla najwyższego punktu Rysów pochodzi z dawnych pomiarów austriackich z lat 1896–1897 i jest z pewnością zawyżona[2]. Rysy cechują się dużą wysokością względną, wznosząc się ponad 1100 metrów nad powierzchnię Morskiego Oka[11].

    Znajdujący się w Tatrach Wysokich masyw Rysów leży na południowy wschód od Morskiego Oka w punkcie zwornikowym głównego grzbietu Tatr i północnej grani Rysów, w której tkwią Niżnie Rysy i Żabie Szczyty (Wyżni i Niżni). U stóp leżą: Dolina Rybiego Potoku, Dolina Białej Wody i Dolina Mięguszowiecka. Od północy oddziela go od Niżnich Rysów Przełęcz pod Rysami, od zachodu od Żabiego Konia Żabia Przełęcz, a od południowego wschodu od Ciężkiego Szczytu w masywie Wysokiej szerokie siodło Wagi[11]. Na wschodnią stronę opada z Rysów 500-metrowa ściana skalna, w której znajdują się liczne drogi wspinaczkowe[12].

    W zachodniej grani  Rysów powyżej Żabiej Przełęczy wyodrębniają się trzy Turnie nad Żabią Przełęczą: Zachodnia Turnia nad Żabią Przełęczą (Západná veža nad Žabím sedlom), Pośrednia Turnia nad Żabią Przełęczą (Innominata, Prostredná veža nad Žabím sedlom) i najwyższa Wschodnia Turnia nad Żabią Przełęczą (Východná veža nad Žabím sedlom)[13]. Od północno-zachodniego szczytu Rysów turnie te są oddzielone Przełączką nad Turniami (Štrbina nad vežami). Przełączka pomiędzy dwoma wyższymi wierzchołkami Rysów nosi nazwę Zadniej Przełączki w Rysach (Zadná priehyba v Rysoch), natomiast pomiędzy najwyższym i najniższym wierzchołkiem znajduje się Pośrednia Przełączka w Rysach (Prostredná priehyba v Rysoch). Na południowy wschód od najniższego wierzchołka grań kieruje się poprzez Przednią Przełączkę w Rysach (Predná priehyba v Rysoch) do Kopy nad Wagą, a następnie opada na Wagę[14].</string>
</resources>